# allennlp-custom-subcommand-sample

./: README.md  pyproject.toml
my_project/: __init__.py
my_project/commands/: __init__.py
my_project/commands/hello_subcommand/: function.py  sub_command.py
